--- a/src/index.Rmd
+++ b/src/index.Rmd
@@ -3,22 +3,22 @@ title: "Visual acuity project"
 author: "Rick Gilmore, Andrea Seisler"
 date: "`r Sys.Date()`"
 output: html_document
+params:
+  pi_name: Rick Gilmore
+  pi_dept: Psychology
+  pi_ph: 814-865-3664
+  pi_email: rog1@psu.edu
+  irb_protocol_id: None
 ---
 
-# About
+# About {-}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, fig.align='center', echo=FALSE, out.width="50%"}
-knitr::include_graphics("include/img/GilmoreLabLogo.png")
-```
+## The investigators {-}
 
-## The investigators
-
-*Rick Gilmore* is Professor of Psychology at Penn State. He directs the lab.
+*Rick Gilmore* is Professor of Psychology at Penn State.
 
 *Andrea Seisler* is the lab manager. She also serves as the Authorizations and Support Specialist for [Databrary](https://databrary.org). Andrea compiled much of the information in the first version of this protocol document.
-
-
