--- a/src/11-potential-benefits.Rmd
+++ b/src/11-potential-benefits.Rmd
@@ -2,7 +2,7 @@
 
 ## Potential Benefits to Subjects {#benefits-subjects}
 
-::: {.instr_box}
+::: {.instr_box .rmdnote}
 
 Describe the potential benefits that individual subjects may
 experience from taking part in the research. If there is no direct
@@ -16,7 +16,7 @@ benefit to subjects]
 
 ## Potential Benefits to Others {#benefits-others}
 
-::: {.instr_box}
+::: {.instr_box .rmdnote}
 
 Describe the potential benefits to society or others.
 
