--- a/src/index.Rmd
+++ b/src/index.Rmd
@@ -1,14 +1,16 @@
 ---
-title: "Visual acuity project"
+title: "The development of visual acuity"
 author: "Rick Gilmore, Andrea Seisler"
 date: "`r Sys.Date()`"
 output: html_document
+bibliography: ['include/bib/teller-acuity-cards.bib']
 params:
   pi_name: Rick Gilmore
   pi_dept: Psychology
   pi_ph: 814-865-3664
   pi_email: rog1@psu.edu
   irb_protocol_id: None
+  irb_long_name: "The Legacy Project: The development of visual acuity"
 ---
 
 # About {-}
@@ -22,3 +24,4 @@ knitr::opts_chunk$set(echo = TRUE)
 *Rick Gilmore* is Professor of Psychology at Penn State.
 
 *Andrea Seisler* is the lab manager. She also serves as the Authorizations and Support Specialist for [Databrary](https://databrary.org). Andrea compiled much of the information in the first version of this protocol document.
+
