Add more data mostly for visualization purposes.

--- a/src/include/bib/teller-acuity-cards.bib
+++ b/src/include/bib/teller-acuity-cards.bib
@@ -1,4 +1,100 @@
 
+@ARTICLE{Clifford2005-ei,
+  title     = "Are norms based on the original Teller Acuity Cards appropriate
+               for use with the new Teller Acuity Cards {II}?",
+  author    = "Clifford, Candice E and Haynes, Breann M and Dobson, Velma",
+  journal   = "Journal of AAPOS: the official publication of the American
+               Association for Pediatric Ophthalmology and Strabismus /
+               American Association for Pediatric Ophthalmology and Strabismus",
+  publisher = "Elsevier",
+  volume    =  9,
+  number    =  5,
+  pages     = "475--479",
+  month     =  oct,
+  year      =  2005,
+  url       = "http://dx.doi.org/10.1016/j.jaapos.2005.04.011",
+  language  = "en",
+  issn      = "1091-8531",
+  pmid      = "16213399",
+  doi       = "10.1016/j.jaapos.2005.04.011"
+}
+
+@ARTICLE{Cavallini2002-hl,
+  title     = "Visual acuity in the first two years of life in healthy term
+               newborns: an experience with the teller acuity cards",
+  author    = "Cavallini, Anna and Fazzi, Elisa and Viviani, Viviana and
+               Astori, Maria Graziana and Zaverio, Silvia and Bianchi, Paolo
+               Emilio and Lanzi, Giovanni",
+  journal   = "Functional neurology",
+  publisher = "scholar.archive.org",
+  volume    =  17,
+  number    =  2,
+  pages     = "87--92",
+  year      =  2002,
+  url       = "https://www.ncbi.nlm.nih.gov/pubmed/12224796",
+  language  = "en",
+  issn      = "0393-5264",
+  pmid      = "12224796"
+}
+
+@ARTICLE{Mayer1995-hi,
+  title    = "Monocular acuity norms for the Teller Acuity Cards between ages
+              one month and four years",
+  author   = "Mayer, D L and Beiser, A S and Warner, A F and Pratt, E M and
+              Raye, K N and Lang, J M",
+  journal  = "Investigative ophthalmology \& visual science",
+  volume   =  36,
+  number   =  3,
+  pages    = "671--685",
+  month    =  mar,
+  year     =  1995,
+  url      = "http://europepmc.org/abstract/med/7890497",
+  keywords = "Child, Preschool; Female; Humans; Infant; Male; Reference Values;
+              Reproducibility of Results; Vision, Monocular; Vision Tests;
+              Visual Acuity",
+  language = "eng",
+  issn     = "0146-0404, 1552-5783",
+  pmid     = "7890497"
+}
+
+@ARTICLE{Salomao1995-pg,
+  title    = "Large sample population age norms for visual acuities obtained
+              with {Vistech-Teller} Acuity Cards",
+  author   = "Salom{\~a}o, S R and Ventura, D F",
+  journal  = "Investigative ophthalmology \& visual science",
+  volume   =  36,
+  number   =  3,
+  pages    = "657--670",
+  month    =  mar,
+  year     =  1995,
+  url      = "https://www.ncbi.nlm.nih.gov/pubmed/7890496",
+  keywords = "Aging; Brazil; Child, Preschool; Ethnic Groups; Female; Humans;
+              Infant; Male; Population; Reference Values; Vision, Binocular;
+              Vision Tests; Visual Acuity",
+  language = "eng",
+  issn     = "0146-0404",
+  pmid     = "7890496"
+}
+
+@ARTICLE{Xiang2021-ry,
+  title    = "Study to establish visual acuity norms with Teller Acuity Cards
+              {II} for infants from southern China",
+  author   = "Xiang, Yifan and Long, Erping and Liu, Zhenzhen and Li, Xiaoyan
+              and Lin, Zhuoling and Zhu, Yi and Chen, Chuan and Lin, Haotian",
+  journal  = "Eye",
+  volume   =  35,
+  number   =  10,
+  pages    = "2787--2792",
+  month    =  oct,
+  year     =  2021,
+  url      = "http://dx.doi.org/10.1038/s41433-020-01314-y",
+  language = "en",
+  issn     = "0950-222X, 1476-5454",
+  pmid     = "33235349",
+  doi      = "10.1038/s41433-020-01314-y",
+  pmc      = "PMC8452650"
+}
+
 @ARTICLE{Teller1983-br,
   title     = "Measurement of visual acuity in human and monkey infants: the
                interface between laboratory and clinic",
