--- a/src/data.qmd
+++ b/src/data.qmd
@@ -1,5 +1,6 @@
 ---
 title: data
+bibliography: "include/bib/teller-acuity-cards.bib"
 params:
   data_dir: "data/csv"
   update_data: TRUE
@@ -102,6 +103,7 @@ acuity_data_dict <- acuity_data_dict |>
                              "Paper publication year",
                              "Source in paper",
                              "Reported age range in mos",
+                             "Age in mos as conformed by ROG",
                              "Participants tested monocularly or binocularly",
                              "Number of participants in group",
                              "Testing distance in cm",
@@ -110,10 +112,31 @@ acuity_data_dict <- acuity_data_dict |>
                              "Estimated lower limit of acuity in cyc/deg",
                              "Teller Acuity Card closest equivalent to this lower limit",
                              "Estimated upper limit of acuity in cyc/deg",
-                             "Country where data were collected"))
+                             "Country where data were collected",
+                             "TAC-I or TAC-II"))
 
 acuity_data_dict |>
   knitr::kable(format = 'html') |>
   kableExtra::kable_classic()
+```
+
+## Data visualization
+
+::: {.callout-important}
+
+Rick Gilmore decided to take the mean of the age range reported in the [@Xiang2021-ry] data and create a new variable *strictly* for visualization purposes, `age_grp_rog`.
+
+:::
+
+We are still in the early phases of the project (as of `r Sys.time()`), but it is good to start sketching the the data visualizations we will eventually want to see.
+
+```{r fig-teller-acuity-across-age, fig.cap="Developmental time course of mean acuity as assessed by Teller Acuity Cards"}
+library(ggplot2)
+acuity_df |>
+  ggplot() +
+  aes(x = age_grp_rog, y = mean_acuity_cyc_deg, color = country) +
+  geom_point() + 
+  geom_smooth() +
+  facet_grid(cols = vars(binoc_monoc))
 ```
 
